--- a/templates/footer.html
+++ b/templates/footer.html
@@ -32,8 +32,8 @@
               href="https://x.com/xKartikeya"
               target="_blank"
               rel="noopener noreferrer"
-              aria-label="Twitter (now X)"
-              ><i class="fab fa-twitter"></i> Twitter (now X)</a
+              aria-label="X (formerly Twitter)"
+              ><i class="fab fa-x-twitter"></i> Twitter (now X)</a
             >
           </li>
         </ul>
