--- a/templates/footer.html
+++ b/templates/footer.html
@@ -33,7 +33,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="X (formerly Twitter)"
-              ><i class="fab fa-x-twitter"></i> Twitter (now X)</a
+              ><i class="fab fa-twitter"></i> Twitter (now X)</a
             >
           </li>
         </ul>
